Test/typing/should_fail/methods_native_strictfp.java
package tutu.titi.toto;

class A {

    native strictfp void myMethod(){}

}